# BotUcDyaDya

./: .env  .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
core/: settings.py
handlers/: handler.py
keyboard/: kb.py
requests_server/: http_requests.py
